# llm-plan-execute

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  package.yml  quality.yml  release-bump.yml
docs/adr/: 0001-use-uv-for-python-project-management.md  0002-use-provider-clis-as-execution-boundary.md  0003-use-deterministic-model-selection.md  0004-scaffold-provider-skills-in-repository.md  0005-exact-or-estimated-usage-reporting.md  0006-use-provider-specific-command-adapters.md  0007-split-quality-and-sonar-workflows.md  0008-validate-local-provider-config.md  README.md  template.md
scripts/: __init__.py  bump_version.py
skills/claude/: CLAUDE.md
skills/codex/: SKILL.md
skills/cursor/: llm-plan-execute.md
src/llm_plan_execute/: __init__.py  artifacts.py  build_review_schema.py  cli.py  config.py  context_cli.py  context_store.py  context_types.py  git_flow.py  html_report.py  implementation_hooks.py  interactive.py  plan_sections.py  prompts.py  providers.py  reporting.py  selection.py  selection_parser.py  session_runner.py  types.py  wizard.py  workflow.py  (+2 more)
tests/: test_build_review_schema.py  test_bump_version.py  test_cli.py  test_config.py  test_context_cli.py  test_context_store.py  test_git_flow.py  test_html_report.py  test_implementation_hooks.py  test_interactive.py  test_plan_permission_fallback.py  test_plan_sections.py  test_prompts.py  test_providers.py  test_selection.py  test_selection_parser.py  test_session_runner.py  test_version_sync.py  test_wizard.py  test_workflow.py  test_workflow_runner.py  test_workflow_state.py  test_workspace_paths.py
